--- a/templates/produit2/edit.html.twig
+++ b/templates/produit2/edit.html.twig
@@ -8,7 +8,7 @@
 
 	{{ include('produit2/_form.html.twig', {'button_label': 'Update'}) }}
 
-	<a href="{{ path('app_produit2_index') }}">back to list</a>
+	<a href="{{ path('app_produit2_index2') }}">back to list</a>
 
 	{{ include('produit2/_delete_form.html.twig') }}
 {% endblock %}
