--- a/public/admin/assets/css/styles.css
+++ b/public/admin/assets/css/styles.css
@@ -1853,6 +1853,7 @@ table.dbkit-table tr td {
 
 p.card-text {
     margin-bottom: 23px;
+    min-height: 120px;
 }
 
 /*-------------------- END Cards ------------------- */
