--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -38,6 +38,7 @@ body {
 	font-family: "Montserrat", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	font-smoothing: antialiased;
+	background-color: #2c2c2c;
 }
 
 h1,
@@ -83,6 +84,7 @@ p {
 	font-weight: 400;
 	line-height: 24px;
 	margin: 0 0 15px 0;
+	min-height: 120px;
 }
 
 img {
