--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -4,11 +4,10 @@
 {% endblock %}
 
 {% block body %}
-	<hh4 style="color: white;">Edit User</h4>
+	<h4 style="color: azure">Edit
+		{{ user.username }}</h4>
 
 	{{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-	<a href="{{ path('app_user_index')}}" class="btn btn-secondary btn-xs">back to list
-	</a>
 
 {% endblock %}
