--- a/templates/admin/baseAdmin.html.twig
+++ b/templates/admin/baseAdmin.html.twig
@@ -12,7 +12,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																																																																						           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																																																																								           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			<link rel="stylesheet" href="{{asset('admin/assets/css/bootstrap.min.css')}}"/>
 			<link rel="stylesheet" href="{{asset('admin/assets/css/font-awesome.min.css')}}"/>
@@ -92,6 +92,14 @@
 									<a href="{{ path('app_game_index')}}" aria-expanded="true">
 										<i class="fa fa-gamepad"></i>
 										<span>Games</span>
+									</a>
+
+								</li>
+								<li>
+									<!-- RECOMENDED GAMES -->
+									<a href="{{ path('app_recomendedg_index') }}" aria-expanded="true">
+										<i class="fa fa-credit-card"></i>
+										<span>Recomended Games</span>
 									</a>
 
 								</li>
@@ -396,7 +404,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -431,7 +439,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -445,7 +453,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -470,7 +478,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -494,7 +502,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
 							</p>
 						</div>
 						<div class="timeline-task">
@@ -508,7 +516,7 @@
 							</div>
 							<p>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse
-																																																																																																																																																																																																																																																																																																																								              distinctio itaque at.
+																																																																																																																																																																																																																																																																																																																																              distinctio itaque at.
 							</p>
 						</div>
 					</div>
@@ -537,7 +545,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																																																																																																																																																															                with the input.
+																																																																																																																																																																																																																																																																																																																																																																								                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
@@ -560,7 +568,7 @@
 								</div>
 								<p>
 									The for attribute is necessary to bind our custom checkbox
-																																																																																																																																																																																																																																																																																																																																																															                with the input.
+																																																																																																																																																																																																																																																																																																																																																																								                with the input.
 								</p>
 							</div>
 							<div class="s-settings">
