--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,60 +1,52 @@
 <div class="form">
 
 
-	{{ form_start(form) }}
+	{{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
 	<div class="input-container ic1">
 		{{ form_widget(form.username, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
+		{{ form_errors(form.username) }}
 		<div class="cut cut-short"></div>
 		<label class="placeholder">Username</label>
 	</div>
 	<div class="input-container ic1">
 		{{ form_widget(form.firstName, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">First name</label>
 	</div>
 	<div class="input-container ic1">
 		{{ form_widget(form.lastName, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">Last Name</label>
 	</div>
 	<div class="input-container ic1">
 		{{ form_widget(form.email, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">Email</label>
 	</div>
 	<div class="input-container ic1">
 		{{ form_widget(form.phone, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">Phone</label>
 	</div>
 	<div class="input-container ic1">
 		{{ form_widget(form.country, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">Country</label>
 	</div>
 
 	<div class="input-container ic1">
 		{{ form_widget(form.birthDate, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">birthDate</label>
 	</div>
 
 	<div class="input-container ic1">
 		{{ form_widget(form.gender, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">Gender</label>
 	</div>
 	<div class="input-container ic1">
 		{{ form_widget(form.role, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
-
 		<div class="cut cut-short"></div>
 		<label class="placeholder">Role</label>
 	</div>
